fix sizing on mobile

--- a/src/css/footerstyle.css
+++ b/src/css/footerstyle.css
@@ -31,7 +31,6 @@
     width: 90vw;
     background-color: rgba(0, 0, 0, 0) !important;
     color: white !important;
-    padding: 20px;
     margin-left: 15px;
 }
 
